Testing examples.